src/main/java/com/example/payroll/web/error/OrderNotFoundException.java
package com.example.payroll.web.error;

public class OrderNotFoundException extends RuntimeException {

    public OrderNotFoundException(Long id) {
        super("Could not find order " + id);
    }
}
